--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.16)
 
 project(GraphVisualization VERSION 0.1 LANGUAGES CXX)
 
+# Enable automatic handling of Qt-specific build steps
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOUIC_SEARCH_PATHS "${CMAKE_CURRENT_SOURCE_DIR}/ui")
 set(CMAKE_AUTOMOC ON)
@@ -10,64 +11,66 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# Find Qt
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
+# ============================
+# Define source and header files
+# ============================
 set(PROJECT_SOURCES
-        main.cpp
-        src/mainwindow.cpp
-        src/algorithm.cpp
-        src/graphwidget.cpp
-        ui/mainwindow.ui
+    main.cpp
+    src/mainwindow.cpp
+    src/algorithm.cpp
+    src/graphwidget.cpp
+    ui/mainwindow.ui
 )
 
 set(PROJECT_HEADERS
-        include/mainwindow.h
-        include/graphwidget.h
-        include/algorithm.h
-        include/constants.h
+    include/mainwindow.h
+    include/graphwidget.h
+    include/algorithm.h
+    include/constants.h
 )
 
+# ============================
+# Build the GUI application
+# ============================
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(GraphVisualization
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
         ${PROJECT_HEADERS}
     )
-# Define target properties for Android with Qt 6 as:
-#    set_property(TARGET GraphVisualization APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
-#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
-# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
-    if(ANDROID)
-        add_library(GraphVisualization SHARED
-            ${PROJECT_SOURCES}
-        )
-# Define properties for Android with Qt 5 after find_package() calls as:
-#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
-    else()
-        add_executable(GraphVisualization
-            ${PROJECT_SOURCES}
-        )
-    endif()
+    add_executable(GraphVisualization
+        ${PROJECT_SOURCES}
+        ${PROJECT_HEADERS}
+    )
 endif()
 
 target_link_libraries(GraphVisualization PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
-# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
-# If you are developing for iOS or macOS you should consider setting an
-# explicit, fixed bundle identifier manually though.
-if(${QT_VERSION} VERSION_LESS 6.1.0)
-  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.GraphVisualization)
-endif()
+# ============================
+# Build the console benchmark tool
+# ============================
+add_executable(Benchmark
+    src/benchmark.cpp
+    src/algorithm.cpp)
+set_target_properties(Benchmark PROPERTIES WIN32_EXECUTABLE FALSE)
+target_include_directories(Benchmark PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+# ============================
+# Optional: Bundle config for Windows/macOS
+# ============================
 set_target_properties(GraphVisualization PROPERTIES
-    ${BUNDLE_ID_OPTION}
-    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
-    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
     MACOSX_BUNDLE TRUE
     WIN32_EXECUTABLE TRUE
 )
 
+# ============================
+# Installation rules
+# ============================
 include(GNUInstallDirs)
 install(TARGETS GraphVisualization
     BUNDLE DESTINATION .
